fix fonts and color palette for components and fix bugs

--- a/chat-app/src/app/globals.css
+++ b/chat-app/src/app/globals.css
@@ -44,3 +44,10 @@
 .animate-pulse-dot {
   animation: pulse-dot 1.5s ease-in-out infinite;
 }
+
+
+
+.authdiv {
+  background-image: url(../../public/authdiv.jpg);
+  background-blend-mode: lighten;
+}
